--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Admin Panel{% endblock %}</title>
+    <title>{% block title %}Visitor Admin Panel{% endblock %}</title>
     <!-- MDB CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/mdb.min.css') }}">
     <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/all.min.css') }}" rel="stylesheet">
     <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="{{ url_for('static', filename='js/jquery-3.7.0.min.js') }}"></script>
     {% block css %}{% endblock %}
     <style>
         /* Common admin styles */
@@ -183,7 +183,7 @@
                 <i class="fas fa-bars"></i>
             </button>
             {# <img src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.png" alt="Logo"> #}
-            <span class="fs-4 fw-bold">Admin Panel</span>
+            <span class="fs-4 fw-bold">Visitor Admin Panel</span>
         </div>
         <div class="d-flex align-items-center">
             <div class="d-flex align-items-center me-3">
