--- a/templates/current_visitors.html
+++ b/templates/current_visitors.html
@@ -1,6 +1,6 @@
 {% extends "base_admin.html" %}
 
-{% block title %}Current Visitors{% endblock %}
+{% block title %}{{ _('Current Visitors') }}{% endblock %}
 
 {% block css %}
 <!-- DataTables CSS -->
@@ -17,15 +17,15 @@
       <table id="currentVisitorsTable" class="table table-bordered table-striped">
         <thead class="table-light">
         <tr>
-          <th>Sl No</th>
-          <th>Name</th>
-          <th>Company</th>
-          <th>Phone</th>
-          <th>Email</th>
-          <th>Purpose</th>
-          <th>Whom to Meet</th>
-          <th>Check-In</th>
-          <th>Actions</th>
+          <th>{{ _('Sl No') }}</th>
+          <th>{{ _('Name') }}</th>
+          <th>{{ _('Company') }}</th>
+          <th>{{ _('Phone') }}</th>
+          <th>{{ _('Email') }}</th>
+          <th>{{ _('Purpose') }}</th>
+          <th>{{ _('Whom to Meet') }}</th>
+          <th>{{ _('Check-In') }}</th>
+          <th>{{ _('Actions') }}</th>
         </tr>
         </thead>
         <tbody>
@@ -39,7 +39,7 @@
             <td>{{ v.purpose }}</td>
             <td>{{ v.whom_to_meet }}</td>
             <td>{{ v.checkin_time|datetime('medium') }}</td>
-            <td><a class="btn btn-sm btn-warning" href="/admin/logout_visitor/{{ v.id }}"><i class="fas fa-sign-out-alt me-2"></i>Clock Out</a></td>
+            <td><a class="btn btn-sm btn-warning" href="/admin/logout_visitor/{{ v.id }}"><i class="fas fa-sign-out-alt me-2"></i>{{ _('Clock Out') }}</a></td>
           </tr>
         {% endfor %}
         </tbody>
@@ -68,7 +68,7 @@
       "buttons": [
         {
           "extend": "excel",
-          "text": "<i class=\"fas fa-file-excel me-2\"></i>Download",
+          "text": "<i class=\"fas fa-file-excel me-2\"></i>{{ _('Download') }}",
           "className": "btn btn-sm btn-primary dt-custom-btn",
           "filename": "current_visitors"
         }
